crates/plotnik-tests/tests/03-analyze/alternations/mixed_inner_alternation_only_reported.txt
Q = [
  A: [
    B: (b)
    (c)
  ]
]
------------------ DIAGNOSTICS -------------------
error: an alternation cannot mix labeled and unlabeled alternatives
 --> query.ptk:4:5
  |
3 |     B: (b)
  |     - labeled alternative here
4 |     (c)
  |     ^^^
  |
help: either label every alternative or remove all labels
------------------ DEFINITIONS -------------------
